--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -4,7 +4,7 @@
 
 >
   <div class="container d-flex justify-content-between align-items-center">
-    <!-- Logo và địa chỉ -->
+   
     <div class="d-flex align-items-center p-3 text-white">
       <p class="fs-5 fw-bold mb-2 border-end pe-2">Find Restaurant</p>
 
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <!-- User -->
+   
     <div class="d-flex align-items-center p-3 text-white">
       <div
         (click)="toggleUser()"
@@ -28,7 +28,7 @@
         <p class="mb-0">Hàn Phi</p>
       </div>
 
-      <!-- Tam giác nhỏ -->
+      
       <div
         *ngIf="showUser"
         style="
@@ -43,7 +43,7 @@
         "
       ></div>
 
-      <!-- Dropdown menu -->
+     
       <div
         *ngIf="showUser"
         class="text-black"
@@ -73,7 +73,7 @@
   </div>
 </header>
 
-<!-- Overlay tìm kiếm -->
+
 <div
   *ngIf="showSearch"
   id="blur"
@@ -114,7 +114,7 @@
     <div class="d-flex justify-content-center gap-3">
     
       
-      <!-- Ô tìm kiếm -->
+   
       <div class="text-black d-flex justify-content-between" style="width: 90%;">
         <div
           class="text-black d-flex overflow-hidden align-items-center"
@@ -125,8 +125,10 @@
             type="text"
             name="keyword"
             class="form-control"
+            [value]="keyword()";
             placeholder="Location, Restaurant, or Cuisine"
             style="border: none; box-shadow: none; outline: none;"
+            (input)="onInput($event)"
           />
         </div>
         <button type="submit" class="btn btn-danger text-center" style="width:100px;">
