--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,7 +2,6 @@
   <form (ngSubmit)="onSubmit()" class="d-flex justify-content-center gap-3 mt-2">
     
 
-    <!-- Search -->
     <div class="text-black d-flex justify-content-between" style="width: 90%;">
       <div class="text-black d-flex overflow-hidden align-items-center"
            style="border:1px solid grey; border-radius:4px; width:80%;">
@@ -11,8 +10,11 @@
              
                name="keyword"
                class="form-control"
+               [value]="keyword()"
                placeholder="Location, Restaurant, or Cuisine"
-               style="border: none; box-shadow: none; outline: none;">
+               style="border: none; box-shadow: none; outline: none;"
+               (input)="onInput($event)"
+               >
       </div>
       <button type="submit" class="btn btn-danger text-center" style="width:100px;">
         Find
@@ -20,7 +22,7 @@
     </div>
   </form>
 
-  <!-- Banner -->
+ 
   <div style="background-image: url('https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80');
               background-size: cover; background-position: center;
               background-repeat: no-repeat; height: 400px; margin-top:20px;">
