add pages/component fontend

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,6 @@
 
 <footer class=
-    "bg-danger text-white text-center p-3 mt-auto"
+    " text-white text-center p-3 mt-auto"
     
      style="height: 70px;"
     >
