--- a/src/app/pages/find/find.html
+++ b/src/app/pages/find/find.html
@@ -1,71 +1,168 @@
-<div class="flex-fill w-100 bg-primary"
+<div class="flex-fill w-100">
 
-style="height: 569px;"
-
->
-  
- <form (ngSubmit)="onSubmit()" 
-  class="d-flex justify-content-center align-items-center gap-3  w-100"
-  style="
-    height: 70px; 
-    position: sticky; 
-    top: 70px; 
-    z-index:9;
-  "
- >
- 
-
-  
-      <div class="text-black d-flex justify-content-between  " 
-  style="width: 90%;
-  height:40px;
-  ">
-       <div class="text-black d-flex overflow-hidden align-items-center bg-white"
-        style="border:1px solid grey; border-radius:4px; width: 80%;">
-
+  <!-- Search-->
+  <form (ngSubmit)="onSubmit()" 
+        class="d-flex justify-content-center align-items-center gap-3 w-100"
+        style="height: 70px; position: sticky; top: 70px; z-index: 9;">
+    
+    <div class="text-black d-flex justify-content-between" style="width: 90%; height: 40px;">
+      
+      <div class="text-black d-flex overflow-hidden align-items-center bg-white"
+           style="border:1px solid grey; border-radius:4px; width: 80%;">
         <i class="fa-solid fa-magnifying-glass"></i>
         <input type="text"
-             
                name="keyword"
                class="form-control"
                placeholder="Location, Restaurant, or Cuisine"
-               style="border: none; box-shadow: none; outline: none;">
+               style="border: none; box-shadow: none; outline: none;"
+               [value]="keyword()"
+               (input)="onInput($event)">
       </div>
+
       <button type="submit" class="btn btn-danger text-center" style="width:100px;">
         Find
       </button>
+
     </div>
   </form>
-<div
-class="bg-primary"
-style="
-height: 50px;
-position:sticky;
-top:140px;
-border-bottom: 1px solid grey;
-z-index: 9;
 
-"
->
-</div>
+  <div class="bg-danger" style="height:50px; position:sticky; top:140px; border-bottom:1px solid grey; z-index: 9;"></div>
 
- 
-  <div class="row g-3 align-items-start bg-white w-100 m-0">
-    <div class="col-12 col-md-6 col-lg-4 col-xl-7 bg-white text-black m-0 p-0">
-      <div>10 restaurant</div>
-      <div class="bg-danger">
-        <div class="row" style="cursor:pointer;" >
-          <div class="col-4" style="height:150px;">
-            <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" class="img-fluid" style="height:100%; width:100%; object-fit:cover;">
+  <div class="row g-3 align-items-start w-100 m-0 p-0">
+
+    <!-- Restaurant List -->
+    @if(!isFullMap()) {
+      <div class="col-10 col-md-6 col-lg-4 col-xl-7 bg-white text-black m-0 p-0" style="height: 1500px;">
+        <div>10 restaurant</div>
+        <div class="bg-danger" (click)="onTap()">
+          <div class="row" style="cursor:pointer;">
+            <div class="col-4" style="height:150px;">
+              <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" 
+                   class="img-fluid" style="height:100%; width:100%; object-fit:cover;">
+            </div>
+            <div class="col-7">
+              <div class="d-flex align-items-center justify-content-start">
+                <span class="d-flex align-items-center justify-content-start star-container">4.7</span>
+
+         
+                @for(i of [].constructor(totalStars); track i) {
+                  <div class="d-flex align-items-center justify-content-start star-container">
+                    <div class="star-wrapper" [ngStyle]="{
+                      position: 'relative',
+                      width: '8px',
+                      height: '10px',
+                      margin: '0',
+                      padding: '0',
+                      display: 'flex'
+                    }">
+                      <div [ngStyle]="{
+                        color: 'lightgray',
+                        fontSize: '10px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0'
+                      }">★</div>
+
+                      <div [ngStyle]="{
+                        color: 'red',
+                        fontSize: '10px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0',
+                        width: getStarFill(i) + '%',
+                        overflow: 'hidden',
+                        whiteSpace: 'nowrap'
+                      }">★</div>
+                    </div>
+                  </div>
+                }
+              </div>
+            </div>
           </div>
-          <div class="col-7"> cột phải </div>
         </div>
       </div>
-    </div>
-    <div class="d-none d-md-flex col-md-6 col-lg-8 col-xl-5 m-0 p-0 bg-danger" 
-     style="height:449px; position: sticky; top:190px;">
-      <div id="map" style="height:100%; width:100%;"></div>
+    }
+
+    <!-- Map-->
+    <div [ngClass]="{
+          'col-12 bg-white': isFullMap(),
+          'col-2 col-md-6 col-lg-8 col-xl-5 bg-white': !isFullMap()
+        }" 
+         style="height:452px; position: sticky; top:190px; margin:0; padding:0;">
+      
+      <div class="d-flex justify-content-center align-items-center"
+           (click)="toggleMap()"
+           style="width:25px; height:50px; position:absolute; top:45%; background-color:white; z-index:20;">
+        <i class="fa-solid" [ngClass]="isFullMap() ? 'fa-chevron-right' : 'fa-chevron-left'" style="color:black;"></i>
+      </div>
+
+      <div id="map" style="height:100%; width:100%; z-index:1; margin:0; padding:0;"></div>
+
+      <!-- Restaurant Panel -->
+      @if(isClickMarker()) {
+        <div class="restaurant-panel">
+          <div class="panel-overlay">
+            <div class="restaurant-card" (click)="goToRestaurantPage()">
+
+              <div class="restaurant-image" [ngStyle]="{
+                'background-image': restaurant?.image ? 'url(' + restaurant.image + ')' : 'none',
+                'background-color': restaurant?.image ? 'transparent' : 'grey'
+              }">
+                <button class="close-btn" (click)="closeMarker($event)">
+                  <i class="fa fa-times"></i>
+                </button>
+              </div>
+
+              <div class="restaurant-name">{{ restaurant.name }}</div>
+
+              <div class="d-flex align-items-center justify-content-start">
+                <h4 class="d-flex align-items-center justify-content-start star-container">4.7</h4>
+
+                @for(i of [].constructor(totalStars) ;track i) {
+                  <div class="d-flex align-items-center justify-content-start star-container">
+                    <div class="star-wrapper" [ngStyle]="{
+                      position: 'relative',
+                      width: '25px',
+                      height: '30px',
+                      margin: '0',
+                      padding: '0',
+                      display: 'flex'
+                    }">
+                      <div [ngStyle]="{
+                        color: 'lightgray',
+                        fontSize: '30px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0'
+                      }">★</div>
+
+                      <div [ngStyle]="{
+                        color: 'red',
+                        fontSize: '30px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0',
+                        width: getStarFill(i) + '%',
+                        overflow: 'hidden',
+                        whiteSpace: 'nowrap'
+                      }">★</div>
+                    </div>
+                  </div>
+                }
+              </div>
+
+              <div class="restaurant-hours">{{ restaurant.openingHour }}</div>
+              <div class="tap-to-open">Tap to open page</div>
+
+            </div>
+          </div>
+        </div>
+      }
+
     </div>
   </div>
-
 </div>
