--- a/src/app/pages/wardrestaurant/wardrestaurant.html
+++ b/src/app/pages/wardrestaurant/wardrestaurant.html
@@ -23,18 +23,10 @@
     </div>
   </form>
 
+<app-town-scroll [wards]="wards"></app-town-scroll>
+<app-hight-scroll [wards]="wards"></app-hight-scroll>
+<app-new-scroll [wards]="wards"></app-new-scroll>
+ <app-cuisine-scroll [cuisines]="cuisines"></app-cuisine-scroll>
  
-  <div style="background-image: url('https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80');
-              background-size: cover; background-position: center;
-              background-repeat: no-repeat; height: 400px; margin-top:20px;">
-    <h2 style="color:white;text-align:center;padding-top:150px;text-shadow:2px 2px 5px black;">
-      Find Restaurant
-    </h2>
-    <p class="text-white text-center mx-auto" style="max-width: 70%;">
-      Find Restaurant helps you discover the best restaurants for every occasion.
-      Through the website and app, you can explore over 60,000 restaurants worldwide
-      and instantly see what’s available nearby.
-    </p>
-  </div>
 </div>
 
